# baseic

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: publish.yml  test.yml
src/: constants.rs  convert.rs  lib.rs  main.rs  opts.rs  strings.rs  ui.rs
src/convert/: ascii.rs  bin.rs  conv_types.rs  dec.rs  hex.rs  octal.rs
src/opts/: args.rs  config.rs  conv_types.rs
template/: PKGBUILD-baseic
