[package]
name = "baseic"
description = "A simple numeric conversion tool"
authors = ["Sergio Carmine <me@sergiocarmi.net>"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"
repository = "https://github.com/carmisergio/baseic"

version = "0.1.0"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
indexmap = "2.2.6"
nom = "7.1.3"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
toml = "0.8.14"
